# task-orchestrator

./: .coverage  .env_example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  locustfile.py  main.py  prometheus.yml  pyproject.toml  pytest.ini  run_load_test.sh
config/: celery.py  settings.py  urls.py
grafana_provisioning/dashboards/: grafana_dashboard.json
orchestrator/: agent.py  models.py  tasks.py  urls.py  views.py
orchestrator/migrations/: 0001_initial.py
orchestrator/tests/: test_approval.py  test_blocks.py  test_monitoring.py  test_tasks.py  test_webhook.py
